# amps

./: README.md  config.yaml  index.html  pyproject.toml  requirements.txt
amps/: __init__.py  api.py  cli.py  config_loader.py  epg_utils.py  ffmpeg_utils.py  plugin_utils.py  server.py  stream_utils.py  updater.py
amps/templates/: dashboard.html
assets/: README.md
